syntax = "proto3"; // proto3 必须加此注解
package Protocol;
option optimize_for = LITE_RUNTIME;
option java_package = "com.kepe.dragon.data.proto";
option java_outer_classname = "PBShop";
option java_multiple_files = true;

message ShopItem{
	int32 configId = 1;				//配置ID
	int32 buyCount = 2;				//已购买数量
	int32 sellOut = 3;				//售罄：0=否；1=是
	int32 index = 4;				//第几个商品
}
//请求商品列表
message ReqShopList{
	int32 shopType = 1;				//商店类型
	
}
//返回商品列表
message AckShopList{
	int32 code = 1;					//错误码
	int32 shopType = 2;				//商店类型
	repeated ShopItem itemList = 3;	//商店物品列表
	int32 refreshTick = 4;			//刷新倒计时
	int32 refreshCount = 5;			//已经刷新的次数
}
//请求购买物品
message ReqBuyItem{
	int32 shopType = 1;				//商店类型
	int32 configId = 2;				//配置ID
}
//返回购买物品
message AckBuyItem{
	int32 code = 1;					//错误码
	ShopItem item = 2;				//商品信息
}


